# C15

./: .gitignore  CMakeLists.txt  README.md  README.txt  dos2unix_all.bat
audio-engine/: CMakeLists.txt
audio-engine/src/: Options.cpp  Options.h  main.cpp
audio-engine/src/io/audio/: AlsaAudioOutput.cpp  AlsaAudioOutput.h  AudioWriter.h
audio-engine/src/io/midi/: AlsaMidiInput.cpp
audio-engine/src/synth/: C15Synth.cpp  C15Synth.h  Synth.cpp  Synth.h
audio-engine/src/synth/c15-audio-engine/: ParallelData.cpp  ParallelData.h  ParameterStorage.h  ae_combfilter.cpp  ae_combfilter.h  ae_echo.cpp  ae_fadepoint.h  ae_feedbackmixer.cpp  ae_feedbackmixer.h  ae_flanger.cpp  ae_outputmixer.cpp  ae_outputmixer.h  ae_reverb.cpp  ae_reverb.h  ae_sine_wavetable.cpp  ae_sine_wavetable.h  ae_soundgenerator.cpp  ae_soundgenerator.h  ae_svfilter.cpp  ae_svfilter.h  ae_svfilter_fir.cpp  ae_svfilter_ni.cpp  ae_svfilter_ni.h  ae_svfilter_proto.cpp  dsp_defines_signallabels.h  dsp_host.cpp  dsp_host.h  key_event.h  nltoolbox.h  paramengine.cpp  pe_defines_config.h  pe_defines_params.h  pe_defines_testconfig.h  pe_env_engine2.cpp  pe_env_engine2.h  smoother_handle.h  voice_allocation.h
audio-engine/systemd/: audio-engine.service.in
build-tools/: CMakeLists.txt
build-tools/bbb/: CMakeLists.txt
build-tools/create-c15-update/: Installer_Error_Codes.txt  create-c15-update.sh
build-tools/create-c15-update/update_scripts/: bbb_update.sh  epc_pull_update.sh  epc_push_update.sh  playcontroller_update.sh  run.sh
build-tools/epc/: CMakeLists.txt  Dockerfile  createUpdate.sh  runBash.sh  runScriptInDocker.sh
build-tools/lpc/: CMakeLists.txt
build-tools/midibridge/: CMakeLists.txt  runInDocker.sh
build-tools/playcontroller/: CMakeLists.txt
projects/bbb-tools/ehc-preset/: CMakeLists.txt  mk.bat
projects/epc/web-ui/: CMakeLists.txt  pom.xml
projects/epc/web-ui/recorder/: styles.css  tsconfig.json  waveform.ts
projects/epc/web-ui/src/main/java/com/nonlinearlabs/: NonMaps.gwt.xml
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/: NonMaps.java  ServerProxy.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/dataModel/: DataModelEntity.java  Notifier.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/dataModel/clipboard/: ClipboardModel.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/dataModel/editBuffer/: EditBufferModel.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/dataModel/presetManager/: Bank.java  BankMapDataModelEntity.java  BankPositionsDataModelEntity.java  BankUpdater.java  Banks.java  BanksDataModelEntity.java  CustomPresetSelection.java  LoadToPartMode.java  Preset.java  PresetListDataModelEntity.java  PresetManagerModel.java  PresetManagerUpdater.java  PresetUpdater.java  Presets.java  SelectedPresets.java  StoreSelectMode.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/dataModel/setup/: SetupModel.java  SetupUpdater.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/integrationTests/: ConvertSoundTypeTests.java  OracleTests.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/presenters/: BankPresenter.java  BankPresenterProvider.java  BankPresenterProviders.java  ClipboardPresenter.java  ClipboardPresenterProvider.java  DeviceInformationProvider.java  DeviceSettings.java  DeviceSettingsProvider.java  EditBufferPresenterProvider.java  FadeEditorPresenterProvider.java  LocalSettingsProvider.java  MidiSettings.java  MidiSettingsProvider.java  ParameterPresenterProvider.java  PresetManagerPresenter.java  PresetManagerPresenterProvider.java  PresetPresenter.java  PresetPresenterProvider.java  PresetPresenterProviders.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/useCases/: AnimationManager.java  BankUseCases.java  ClipboardUseCases.java  EditBufferUseCases.java  PresetManagerUseCases.java  PresetSearch.java  PresetUseCases.java  SystemSettings.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/: ChildrenOwner.java  Control.java  ILayout.java  Mouseing.java  NonLinearWorld.java  NonMapsMouseDoubleClickHandler.java  NonMapsWheelHandler.java  RenameDialog.java  Viewport.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/html/: DropZone.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/maps/: CachingMapsControl.java  ContextMenu.java  ContextMenuItem.java  Label.java  MapsControl.java  MapsLayout.java  SVGImage.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/maps/parameters/: ABSlider.java  KeyTrackParameter.java  LabelModuleHeader.java  LabelSmall.java  Line.java  ModulateableNumericalControl.java  ModulateableParameterName.java  ModulateableSliderHorizontal.java  ModulateableSmallNumericalControl.java  ModulateableValueControl.java  NumericalControlLarge.java  Parameter.java  ParameterEditor.java  ParameterGroup.java  ParameterGroupControls.java  SliderHorizontal.java  SliderHorizontalWithHandle.java  ValueDisplay.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/maps/presets/: MoveAllBanksLayer.java  MoveSomeBanksLayer.java  PresetManager.java
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/maps/settings/: CrashOnError.java  (+3 more)
projects/epc/web-ui/src/main/java/com/nonlinearlabs/client/world/overlay/: BankInfoDialog.java  CompareDialog.java  ContextMenu.java  ContextMenuItem.java  DragProxy.java  FloatingWindow.java  FloatingWindowHeader.java  GlobalButtons.java  Label.java  LayerDisplay.java  LineWrappingLabel.java  Overlay.java  OverlayControl.java  OverlayLayout.java  ParameterInfoDialog.java  PresetContextMenuItem.java  PresetInfoDialog.java  SVGImage.java  SVGImagePhase.java
projects/epc/web-ui/src/main/webapp/: NonMaps.css  NonMaps.html
projects/epc/web-ui/src/test/java/com/nonlinearlabs/: NonMapsJUnit.gwt.xml
projects/realtime-system/src/co-proc/: .cproject  .project  CMakeLists.txt
projects/realtime-system/src/co-proc/src/: co-proc.c
projects/realtime-system/src/co-proc/src/drv/: nl_kbs.c
(+1416 files in other folders)
